@@ -31,7 +31,6 @@ import org.chromium.components.infobars.InfoBarLayout;
 import org.chromium.ui.UiUtils;
 
 import java.util.ArrayList;
-import java.util.LinkedList;
 import java.util.List;
 
 /** An infobar for saving credit card information. */
@@ -46,7 +45,7 @@ public class AutofillSaveCardInfoBar extends ConfirmInfoBar {
     private final String mTitleText;
     private @Nullable String mDescriptionText;
     private final boolean mIsGooglePayBrandingEnabled;
-    private final LinkedList<LegalMessageLine> mLegalMessageLines = new LinkedList<>();
+    private final List<LegalMessageLine> mLegalMessageLines = new ArrayList<>();
 
     /**
      * Creates a new instance of the infobar.
@@ -175,7 +174,10 @@ public class AutofillSaveCardInfoBar extends ConfirmInfoBar {
      */
     @CalledByNative
     private void addLinkToLastLegalMessageLine(int start, int end, String url) {
-        mLegalMessageLines.getLast().links.add(new LegalMessageLine.Link(start, end, url));
+        mLegalMessageLines
+                .get(mLegalMessageLines.size() - 1)
+                .links
+                .add(new LegalMessageLine.Link(start, end, url));
     }
 
     @Override
